Added routes for auxiliary fights
